<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <item
        android:id="@+id/homeFragment"
        android:title="@string/home"
        android:icon="@drawable/home2"
        />

    <item
        android:id="@+id/searchFragment"
        android:icon="@drawable/search"
        android:title="@string/search"/>

    <item
        android:id="@+id/favouriteMealsFragment"
        android:title="@string/favourite"
        android:icon="@drawable/favourite"
        />

    <item
        android:id="@+id/calender"
        android:icon="@drawable/calender"
        android:title="@string/calender"/>

    <item
        android:id="@+id/profile"
        android:icon="@drawable/profile"
        android:title="@string/profile"/>


</menu>