<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".authentication.view.RegisterFragment">

    <EditText
        android:id="@+id/password_edit_text_register"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:background="@drawable/custom_email_holder"
        android:ems="10"
        android:hint="@string/passwordHint"
        android:inputType="textPassword"
        android:paddingStart="16dp"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toBottomOf="@+id/textView15" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="278dp"
        android:layout_height="80dp"
        android:layout_marginTop="100dp"
        android:text="@string/create_your_new_account"

        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="277dp"
        android:layout_height="43dp"
        android:layout_marginTop="8dp"
        android:text="@string/create_new_account_desc"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="252dp"
        android:text="@string/email_address"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="47dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="363dp" />

    <EditText
        android:id="@+id/email_edit_text_register"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:background="@drawable/custom_email_holder"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:padding="5dp"
        android:paddingStart="16dp"
        android:paddingLeft="5dp"
        android:paddingTop="5dp"
        android:paddingEnd="5dp"
        android:paddingRight="5dp"
        android:paddingBottom="5dp"
        android:textColorHint="@color/grey_4"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />


    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="340dp"
        android:text="@string/password"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="432dp"
        android:text="@string/confirm_password"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/confirm_password_edit_text_register"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:background="@drawable/custom_email_holder"
        android:ems="10"
        android:hint="@string/passwordHint"
        android:inputType="textPassword"
        android:paddingStart="16dp"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toBottomOf="@+id/textView17" />

    <Button
        android:id="@+id/signup_btn"
        android:layout_width="276dp"
        android:layout_height="61dp"
        android:layout_marginTop="580dp"
        android:backgroundTint="#129575"
        android:text="@string/sign_up"
        app:layout_constraintEnd_toStartOf="@+id/guideline4"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
            android:id="@+id/accept_terms_check_box"
        android:layout_width="233dp"
        android:layout_height="39dp"
        android:layout_marginTop="496dp"
        android:text="Accept terms and Condition"
        android:textColor="#FF9C00"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>